# intelligent-systems-and-technologies

./: README.md  example.db  foo.py  models.py  pyproject.toml
k_neighbours/: README.md  main.py
task_1_k_neighbours/: README.md  models.py  recsys.ipynb  result.csv  utils.py
task_2_vk_graph/: README.md  analyzer.py  core.py  file_service.py  graph.py  main.py  models.py  vk_api.py
task_2_vk_graph/db/: repository.py  table.py
task_2_vk_graph/storage_iteration_1/: betweness.json  current_queue.json  data.json  eigenvector.json  graph.html  visited.json
task_2_vk_graph/storage_iteration_2/: betweness.json  current_queue.json  data.json  eigenvector.json  graph.html  visited.json
task_2_vk_graph/storage_iteration_3/: graph-2-15.html  graph.html  visited.json
task_3_schelling_model/: README.md  main.py  schelling_model.py  test_rank.py  visualizer.py
task_4_agent_and_glasses/: README.md  main.py
task_4_tic_tac_toe/: main.py
vk_graph/: analyzer.py  graph.py  main.py  vk_api.py
