[tool.poetry]
name = "recsys-mirea"
version = "0.1.0"
description = ""
authors = ["Daniil Belov <daniil.belov@masterdelivery.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
pydantic = "^2.9.2"
jupyter = "^1.1.1"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

