[tool.poetry]
name = "recsys-mirea"
version = "0.1.0"
description = ""
authors = ["Daniil Belov <--->"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pydantic = "^2.9.2"
jupyter = "^1.1.1"
aiohttp = "^3.10.10"
networkx = "^3.4.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

